pagina de labo1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Labo 1</title>
+</head>
+<body>
+    <h1>Una buena práctica para escribir código: nombrar elementos</h1>
+    <div>
+        <p>¿Les ha pasado que están súper inspirados escribiendo código pero 
+            repentinamente necesitan una luz divina que les diga <strong>qué nombre 
+            ponerle a la variable que están a punto de escribir?</strong>
+        </p>
+    </div>
+    <div>
+        <p>
+            Como <a href="#">Frontend</a> hay tantas cosas que debo nombrar en mi día
+             a día
+        </p>
+    </div>
+    <div>
+        <p>
+            A pesar de que es algo que depende totalmente de nosotros y no hay una 
+            forma estrictamente correcta o incorrecta de hacerlo, nombrar cada elemento
+            en un trabajo en el que debemos poner empeño, pues se verá impactado
+            en <strong>ls organización y mantenibilidad de nuestro código.</strong>
+        </p>
+    </div>
+    <div>
+        <p>
+            <strong>Fanny</strong> es parte de <em>Team Platzi</em>. Si quieres una
+            carrera en Frontend, empieza por el <a href="#">Curso de Desarrollo Web</a>
+            y luego el <a href="#">Curso de Responsive Desing</a>.
+        </p>
+    </div>
+    <div>
+        Lo más importante (..) <strong>reducir la necesidad de comentar cada linea 
+            de código con su funcionamiento.</strong>
+    </div>
+    <div>
+        <p>
+            A continuación algunos (..)
+        </p>
+    </div>
+    <div>
+        <ul>
+            <li>Nombres descriptivos</li>
+            <li>Nombres conformados por un conjunto de palabras</li>
+            <li>La longitud del nombre asignado</li>
+        </ul>
+    </div>
+    <h2>Nombres descriptivos</h2>
+    <hr>
+    <div>
+        <p>Abreviar nombres (..) <strong>utilizar nombres que describan la funcionalidad
+        de nuestro codigo</strong></p><br>
+        <p>Por ejemplo, es mucho más descriptivo escribir:</p><br>
+        <img src="public/img/H.jpg" alt="Imagen uno" height="200" width="500"><br>
+        <p>Que:</p><br>
+        <img src="public/img/H.jpg" alt="Imagen dos" height="200" width="500">
+    </div>
+    <h3>Nombres conformados por un conjunto de palabras</h3>
+    <hr>
+    <div>
+        <p>Generalmente (..)<strong>capitalizando cada palkabra agrupada</strong>
+        <em> (camelCase)</em><strong> o separado cada palabra con underscore</strong>
+         (snake_case).e_case).</p>
+         <p>Por ejemplo:</p>
+         <img src="public/img/H.jpg" alt="Imagen tres" height="50" width="500">
+         <p>o</p>
+         <img src="public/img/H.jpg" alt="Imagen cuatro" height="50" width="500">
+    </div>
+    <h4>La longitud de el nombre asignado</h4>
+    <hr>
+    <div>
+        <p>
+            A pesar (..) <strong>no quiere decir que tenemos que usar frases 
+            completas</strong>. Es importante (..) <strong><em>la longitud recomendable
+            es de 2 a 4 palabras o entre 8 y 20 caracteres. </em></strong>
+        </p>
+        <p>
+            En conclusión (..) <strong>Nosotros como desarrolladores tenemos
+            la responsabilidad de hacerlo lo mejor posible</strong>
+        </p>
+    </div>
+    <div>
+        <p>
+            Si recién (..) <a href="#">Curso de programación básica</a> para 
+            empezar (..)
+        </p>
+    </div>
+</body>
+</html>
+
