labo2 header, nav,...

--- a/index.html
+++ b/index.html
@@ -7,13 +7,31 @@
     <title>Labo 1</title>
 </head>
 <body>
-    <h1>Una buena práctica para escribir código: nombrar elementos</h1>
     <div>
-        <p>¿Les ha pasado que están súper inspirados escribiendo código pero 
-            repentinamente necesitan una luz divina que les diga <strong>qué nombre 
-            ponerle a la variable que están a punto de escribir?</strong>
-        </p>
+    <header>
+        <h1>Una buena práctica para escribir código: nombrar elementos</h1>
+    </header>
     </div>
+    <nav>
+        <ul>
+            <li>Python</li>
+            <li>C++</li>
+            <li>Java</li>
+        </ul>
+    </nav>
+    <div>
+    <section>
+        <article>
+                <div>
+                    <p>---------------Articulo------------------
+                        ¿Les ha pasado que están súper inspirados escribiendo código pero 
+                        repentinamente necesitan una luz divina que les diga <strong>qué nombre 
+                        ponerle a la variable que están a punto de escribir?</strong>
+                        -------------------------------------------
+                    </p>
+                </div>
+        </article>
+    </section>
     <div>
         <p>
             Como <a href="#">Frontend</a> hay tantas cosas que debo nombrar en mi día
@@ -90,6 +108,30 @@
             Si recién (..) <a href="#">Curso de programación básica</a> para 
             empezar (..)
         </p>
+    </div>
+    </div>
+    <aside>
+        <div>
+            <p>-------------Aside-------------------
+                ¿Les ha pasado que están súper inspirados escribiendo código pero 
+                repentinamente necesitan una luz divina que les diga <strong>qué nombre 
+                ponerle a la variable que están a punto de escribir?</strong>
+            </p>
+            <p>
+                Puedes enviarnos tu curriculum a: <a href="#"> empleosforfree.com</a>
+                -----------------------------
+            </p>
+        </div>
+    </aside>
+    <div>
+        <footer>
+            <p>
+                -------footer------------
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Labore officia perspiciatis mollitia? Natus repellat fugit omnis 
+                deleniti eum asperiores quae.
+            </p>
+        </footer>
     </div>
 </body>
 </html>
